# Sencore-LC103

./: .gitignore  README.md
all_reverse_engineering/: INDEX.md
all_reverse_engineering/firmware_source/lc103_fw_v1_53_full_rebuild_source/: README.md
all_reverse_engineering/manifests/: LARGE_FILE_COMPATIBILITY.md  trec_duplicate_groups.csv  trec_duplicate_paths.csv
all_reverse_engineering/modern_app/lc103-modern-cal/: README.md  pyproject.toml
all_reverse_engineering/modern_app/lc103-modern-cal/docs/: FIXTURE_REFERENCE_MATRIX_LC103.md  FIXTURE_SPEC_LC103.md  FRONT_PANEL_HIDDEN_FUNCTION_STATUS.md  HUMAN_READABLE_FULL_CALIBRATION_PROCEDURE.md  LEGACY_COMPLETE_LOGIC.md  QT_REBUILD_BLUEPRINT.md  RECOVERY_MAP.md  human_readable_wizard_rundown.txt
all_reverse_engineering/modern_app/lc103-modern-cal/lc103_modern_cal/: __init__.py  app.py  autoselect.py  backup.py  caldata.py  legacy_plan.py  main.py  parity.py  parity_corpus.py  protocol.py  workflow.py
all_reverse_engineering/modern_app/lc103-modern-cal/lc103_modern_cal/profiles/LC103/: P072_10.CAL  README.md  golden_parity_corpus.json  manifest.sha256
all_reverse_engineering/modern_app/lc103-modern-cal/scripts/: bootstrap_self_contained.sh  build_wheelhouse.sh  verify_self_contained.py
all_reverse_engineering/modern_app/lc103-modern-cal/tests/: test_autoselect.py  test_backup.py  test_caldata.py  test_legacy_plan.py  test_parity.py  test_parity_corpus.py  test_protocol.py  test_workflow.py
all_reverse_engineering/stray_home_extractions/: Capacitance testII.xml  Inductance testII.xml  Leakage voltage test.xml
(+99036 files in other folders)
