[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lc103-modern-cal"
version = "0.1.0"
description = "Cross-platform LC103 calibration exploration utility"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "PySide6>=6.5",
]

[project.scripts]
lc103-modern-cal = "lc103_modern_cal.main:main"

[tool.setuptools]
packages = ["lc103_modern_cal"]
include-package-data = true

[tool.setuptools.package-data]
lc103_modern_cal = [
  "profiles/LC103/*.ini",
  "profiles/LC103/*.cal",
  "profiles/LC103/*.CAL",
  "profiles/LC103/*.sha256",
  "profiles/LC103/*.json",
  "profiles/LC103/*.md",
]
